Fixes images overflowing chemistry preface pages

--- a/css/ccap-chemistry.css
+++ b/css/ccap-chemistry.css
@@ -5064,6 +5064,10 @@ div.book > div.chapter > div.section div.equation > *:last-child::after {
 .preface > .section h3 {
   color: #354da1;
 }
+.preface img {
+  max-width: 6.5in;
+  margin: 0;
+}
 /******************************************************
  * Chapter Outline
  ******************************************************/
