--- a/css/refactor/chemistry-skeleton.less
+++ b/css/refactor/chemistry-skeleton.less
@@ -43,6 +43,10 @@
   > .section h3 {
     color: @dark-blue;
   }
+
+  img {
+    #content>#image>.style(any; preface);
+  }
 }
 
 
